More cleanups found by code inspection in various places
Signed-off-by: Paul-Erik Törrönen <poltsi@poltsi.fi>